Update landing.html with interactive link

--- a/landing.html
+++ b/landing.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <div style="margin-top:18px;">
-                  <a href="YOUR_LINK_HERE"
+                  <a href="https://valbucc.github.io/valentine-email/landing.html"
                      style="display:inline-block;background:#ff4d6d;color:#fff;text-decoration:none;padding:12px 18px;border-radius:999px;font-weight:700;">
                     Open the surprise ✨
                   </a>
@@ -35,3 +35,4 @@
     </table>
   </body>
 </html>
+
