--- a/yes.html
+++ b/yes.html
@@ -27,7 +27,7 @@
       padding: 20px;
     }
     .card{
-      width:min(560px, 95vw);
+      width:min(620px, 95vw);
       background:rgba(255,255,255,.92);
       border:1px solid rgba(0,0,0,.06);
       border-radius:22px;
@@ -50,9 +50,8 @@
       font-weight: 600;
     }
 
-    /* Cartoon guy */
     .stage{
-      height: 300px;
+      height: 260px;
       border-radius: 18px;
       border: 1px dashed rgba(255,77,109,.35);
       background: linear-gradient(180deg, #fff, #fff5f7);
@@ -62,6 +61,8 @@
       overflow:hidden;
       margin: 14px 0 14px;
     }
+
+    /* Cartoon guy */
     .guy{
       width: 150px;
       height: 190px;
@@ -92,7 +93,6 @@
     .eye.left{ left: 40px; }
     .eye.right{ right: 40px; }
 
-    /* Kissy mouth */
     .mouth{
       width: 18px; height: 18px;
       background: var(--pink);
@@ -137,9 +137,23 @@
       100%{ transform: translateY(-150px) scale(1.25); opacity:0; }
     }
 
+    /* GIF area */
+    .gifs{
+      display:grid;
+      gap: 12px;
+      margin-top: 14px;
+    }
+    .gif{
+      width:100%;
+      max-width: 520px;
+      border-radius: 16px;
+      border: 1px solid rgba(0,0,0,.06);
+      box-shadow: 0 10px 28px rgba(0,0,0,.10);
+    }
+
     .back{
       display:inline-block;
-      margin-top: 6px;
+      margin-top: 14px;
       text-decoration:none;
       font-weight: 800;
       color: #fff;
@@ -169,11 +183,19 @@
       </div>
     </div>
 
+    <div class="gifs">
+      <img class="gif" alt="Valentine GIF 1"
+        src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjlzdWQ2NW82b3hzamV1NjBkOHhjMDhnMm11d2c0YWk0bHdmbXVidCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/91t7c8D1HzQB2/giphy.gif">
+      <img class="gif" alt="Valentine GIF 2"
+        src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHU3ZjZ3cTNlczRwZTEzZDdrbGU5cTBncnp5MWs4bGljMnk0cm5zbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qdhx91DZB1ApRE8ieK/giphy.gif">
+    </div>
+
     <a class="back" href="./index.html">Back</a>
   </div>
 
   <script>
     const stage = document.getElementById('stage');
+
     function spawnKiss(){
       const el = document.createElement('div');
       el.className = 'kiss';
@@ -187,18 +209,14 @@
       el.style.top  = `${y}px`;
       stage.appendChild(el);
 
-      // force reflow
       void el.offsetWidth;
       el.style.opacity = 1;
 
       setTimeout(() => el.remove(), 1400);
     }
 
-    // start animation
     spawnKiss();
     const timer = setInterval(spawnKiss, 220);
-
-    // stop after a bit (so it doesn't run forever)
     setTimeout(() => clearInterval(timer), 3500);
   </script>
 </body>
