--- a/landing.html
+++ b/landing.html
@@ -43,7 +43,6 @@
       letter-spacing:-0.02em;
     }
 
-    /* CARD */
     .card{
       width:min(560px, 95vw);
       background:rgba(255,255,255,.92);
@@ -55,38 +54,43 @@
       backdrop-filter: blur(6px);
     }
 
-    /* ENVELOPE */
-    .envelope-area{
-      display:grid;
-      place-items:center;
-      margin-top: 6px;
-    }
+    /* Envelope container:
+       - overflow hidden when closed (keeps the letter inside)
+       - overflow visible when open (letter can pop out)
+    */
+    .envelope-area{ display:grid; place-items:center; margin-top: 6px; }
+
     .envelope{
       width: min(420px, 92%);
-      height: 260px;
+      height: 280px;               /* a bit taller = less overlap */
       position:relative;
       cursor:pointer;
       user-select:none;
+      overflow:hidden;             /* IMPORTANT: prevents overlap */
       transform: translateY(0);
       transition: transform .18s ease;
     }
+    .envelope.open{ overflow:visible; } /* allow pop-out */
     .envelope:hover{ transform: translateY(-2px); }
 
     /* Envelope base */
     .env-body{
-      position:absolute; inset: 70px 0 0 0;
+      position:absolute; inset: 80px 0 0 0; /* moved down slightly */
       background: #fff;
       border-radius: 14px;
       border: 1px solid rgba(0,0,0,.08);
       box-shadow: 0 16px 40px rgba(0,0,0,.12);
       overflow:hidden;
+      z-index: 1;
     }
-    /* left/right folds */
+
     .fold-left, .fold-right{
-      position:absolute; top: 70px; bottom: 0;
+      position:absolute; top: 80px; bottom: 0;
       width: 50%;
       background: linear-gradient(135deg, #fff, #fff5f7);
       border: 1px solid rgba(0,0,0,.06);
+      z-index: 2;
+      pointer-events:none;
     }
     .fold-left{
       left:0;
@@ -103,8 +107,8 @@
 
     /* flap */
     .flap{
-      position:absolute; left:0; right:0; top:70px;
-      height: 160px;
+      position:absolute; left:0; right:0; top:80px;
+      height: 170px;
       background: linear-gradient(180deg, #fff, #ffe6ed);
       clip-path: polygon(0 0, 100% 0, 50% 78%);
       border: 1px solid rgba(0,0,0,.06);
@@ -112,15 +116,16 @@
       transform-origin: 50% 0%;
       transform: rotateX(0deg);
       transition: transform .45s ease;
-      z-index: 4;
+      z-index: 5;
+      pointer-events:none;
     }
 
     /* letter inside */
     .letter{
       position:absolute;
       left: 18px; right: 18px;
-      top: 92px;
-      height: 170px;
+      top: 112px;                  /* moved down */
+      height: 160px;               /* slightly shorter */
       background: #fff;
       border-radius: 12px;
       border: 1px solid rgba(0,0,0,.08);
@@ -130,14 +135,16 @@
       gap:10px;
       place-content:center;
       text-align:center;
-      transform: translateY(42px);
+
+      /* CLOSED state: keep it inside the envelope */
+      transform: translateY(58px);
       transition: transform .45s ease;
-      z-index: 3;
+      z-index: 4;
     }
 
     .seal{
       position:absolute;
-      top: 160px;
+      top: 170px;
       left: 50%;
       transform: translateX(-50%);
       width: 54px; height: 54px;
@@ -148,7 +155,8 @@
       place-items:center;
       color:white;
       font-size: 22px;
-      z-index: 5;
+      z-index: 6;
+      pointer-events:none;
     }
 
     .q{
@@ -164,7 +172,6 @@
       font-weight: 600;
     }
 
-    /* Buttons */
     .btn-row{
       margin-top: 8px;
       position:relative;
@@ -204,17 +211,16 @@
       opacity:.65;
       margin-top: 12px;
     }
-
-    /* Open state */
-    .open .flap{ transform: rotateX(165deg); }
-    .open .letter{ transform: translateY(-10px); }
-
     .tap{
       text-align:center;
       font-size: 13px;
       opacity:.7;
       margin-top: 10px;
     }
+
+    /* Open state */
+    .open .flap{ transform: rotateX(165deg); }
+    .open .letter{ transform: translateY(-26px); } /* letter pops out */
   </style>
 </head>
 <body>
@@ -227,75 +233,5 @@
           <div class="flap"></div>
           <div class="seal">❤</div>
 
-          <div class="env-body"></div>
-          <div class="fold-left"></div>
-          <div class="fold-right"></div>
+          <div cl
 
-          <div class="letter" id="letter">
-            <p class="q">Will you be my Valentine?</p>
-            <p class="sub">Choose wisely 😌</p>
-
-            <div class="btn-row" id="btnRow">
-              <button id="yesBtn" type="button">Yes 💘</button>
-              <button id="noBtn" type="button">No 🙅‍♂️</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="tap">Tap the envelope (or just try the buttons).</div>
-        <div class="hint">Tip: the “No” button doesn’t like being clicked.</div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    const envelope = document.getElementById('envelope');
-    const noBtn = document.getElementById('noBtn');
-    const yesBtn = document.getElementById('yesBtn');
-    const btnRow = document.getElementById('btnRow');
-
-    // Open/close envelope on click (cosmetic)
-    envelope.addEventListener('click', (e) => {
-      // don't toggle when clicking buttons (so it doesn't annoy)
-      if (e.target.tagName.toLowerCase() === 'button') return;
-      envelope.classList.toggle('open');
-    });
-
-    // Make "No" run away within btnRow bounds
-    function moveNoButton(){
-      const rowRect = btnRow.getBoundingClientRect();
-      const btnRect = noBtn.getBoundingClientRect();
-
-      const maxX = Math.max(0, rowRect.width - btnRect.width);
-      const x = Math.random() * maxX;
-      const y = (Math.random() * 18) - 9; // small vertical wiggle
-
-      noBtn.style.position = 'absolute';
-      noBtn.style.left = `${x}px`;
-      noBtn.style.top  = `${y}px`;
-    }
-
-    // Escape on "approach"
-    ['mouseenter','mouseover','pointerenter','focus','touchstart'].forEach(evt => {
-      noBtn.addEventListener(evt, (ev) => {
-        ev.preventDefault();
-        moveNoButton();
-      }, {passive:false});
-    });
-
-    // If clicked somehow, still escape
-    noBtn.addEventListener('click', (ev) => {
-      ev.preventDefault();
-      moveNoButton();
-    });
-
-    // YES -> go to animation page
-    yesBtn.addEventListener('click', () => {
-      window.location.href = './yes.html';
-    });
-
-    // initial dodge for fun
-    setTimeout(moveNoButton, 350);
-  </script>
-</body>
-</html>
