--- a/yes.html
+++ b/yes.html
@@ -9,7 +9,6 @@
       --bg1:#fff0f5;
       --bg2:#ffe2ea;
       --pink:#ff4d6d;
-      --ink:#1f1f1f;
       --shadow: 0 18px 55px rgba(0,0,0,.12);
     }
     *{ box-sizing:border-box; }
@@ -23,137 +22,46 @@
         radial-gradient(900px 700px at 15% 15%, var(--bg2), transparent 60%),
         radial-gradient(900px 700px at 85% 25%, #ffeef2, transparent 58%),
         linear-gradient(135deg, #fff, var(--bg1));
-      overflow:hidden;
-      padding: 20px;
+      padding: 18px;
     }
     .card{
-      width:min(620px, 95vw);
+      width:min(720px, 96vw);
       background:rgba(255,255,255,.92);
       border:1px solid rgba(0,0,0,.06);
       border-radius:22px;
       box-shadow: var(--shadow);
-      padding: 26px 22px 18px;
+      padding: 22px 18px 18px;
       text-align:center;
       backdrop-filter: blur(6px);
-      position:relative;
     }
     h1{
-      margin:0 0 8px;
-      font-size: 34px;
+      margin:0 0 10px;
+      font-size: clamp(26px, 4vw, 34px);
       letter-spacing:-0.03em;
       color: var(--pink);
       font-weight: 900;
     }
-    p{
-      margin:0 0 14px;
-      color: rgba(0,0,0,.7);
-      font-weight: 600;
-    }
 
-    .stage{
-      height: 260px;
-      border-radius: 18px;
-      border: 1px dashed rgba(255,77,109,.35);
-      background: linear-gradient(180deg, #fff, #fff5f7);
-      display:grid;
-      place-items:center;
-      position:relative;
-      overflow:hidden;
-      margin: 14px 0 14px;
-    }
-
-    /* Cartoon guy */
-    .guy{
-      width: 150px;
-      height: 190px;
-      position: relative;
-      transform-origin: 50% 100%;
-      animation: pop .45s ease both;
-    }
-    @keyframes pop { from{ transform: translateY(12px) scale(.96); opacity:0 } to{ transform: translateY(0) scale(1); opacity:1 } }
-
-    .head{
-      width: 118px; height: 118px;
-      background: #ffd7b3;
-      border-radius: 50%;
-      position:absolute; top: 0; left: 50%; transform: translateX(-50%);
-      box-shadow: inset 0 -7px 0 rgba(0,0,0,0.06);
-    }
-    .hair{
-      width: 118px; height: 58px;
-      background: #2a1c15;
-      border-radius: 70px 70px 30px 30px;
-      position:absolute; top: 0; left: 50%; transform: translateX(-50%);
-    }
-    .eye{
-      width: 10px; height: 10px; background:#1f1f1f;
-      border-radius: 50%;
-      position:absolute; top: 56px;
-    }
-    .eye.left{ left: 40px; }
-    .eye.right{ right: 40px; }
-
-    .mouth{
-      width: 18px; height: 18px;
-      background: var(--pink);
-      border-radius: 50%;
-      position:absolute; top: 78px; left: 50%; transform: translateX(-50%);
-      box-shadow: 0 6px 0 rgba(0,0,0,.06);
-      animation: kiss .6s ease-in-out infinite alternate;
-    }
-    @keyframes kiss{
-      from{ transform: translateX(-50%) scale(0.95); }
-      to{ transform: translateX(-50%) scale(1.12); }
-    }
-
-    .body{
-      width: 128px; height: 96px;
-      background: linear-gradient(135deg, #4c6fff, #8aa4ff);
-      border-radius: 22px;
-      position:absolute; top: 102px; left: 50%; transform: translateX(-50%);
-      box-shadow: inset 0 -9px 0 rgba(0,0,0,0.08);
-    }
-    .arm{
-      width: 58px; height: 16px;
-      background:#ffd7b3;
-      border-radius: 999px;
-      position:absolute; top: 140px;
-      transform-origin: 10px 8px;
-    }
-    .arm.left{ left: 6px; transform: rotate(18deg); }
-    .arm.right{ right: 6px; transform: rotate(-18deg); animation: wave .5s ease-in-out infinite alternate; }
-    @keyframes wave { from{ transform: rotate(-18deg) translateY(0); } to{ transform: rotate(-36deg) translateY(-2px);} }
-
-    /* Floating kisses/hearts */
-    .kiss{
-      position:absolute;
-      font-size: 22px;
-      animation: floatUp 1.35s ease-out forwards;
-      opacity:0;
-    }
-    @keyframes floatUp{
-      0%{ transform: translateY(18px) scale(.9); opacity:0; }
-      15%{ opacity:1; }
-      100%{ transform: translateY(-150px) scale(1.25); opacity:0; }
-    }
-
-    /* GIF area */
     .gifs{
       display:grid;
-      gap: 12px;
-      margin-top: 14px;
+      gap: 14px;
+      justify-items:center;
+      margin-top: 10px;
     }
+
+    /* ✅ Le gif entrano sempre: max-width e height auto */
     .gif{
-      width:100%;
-      max-width: 520px;
+      width: min(560px, 100%);
+      height: auto;
       border-radius: 16px;
       border: 1px solid rgba(0,0,0,.06);
       box-shadow: 0 10px 28px rgba(0,0,0,.10);
+      display:block;
     }
 
     .back{
       display:inline-block;
-      margin-top: 14px;
+      margin-top: 16px;
       text-decoration:none;
       font-weight: 800;
       color: #fff;
@@ -167,21 +75,6 @@
 <body>
   <div class="card">
     <h1>Great choice!</h1>
-    <p>Sending kisses… 💋💖</p>
-
-    <div class="stage" id="stage">
-      <div class="guy" aria-hidden="true">
-        <div class="head">
-          <div class="hair"></div>
-          <div class="eye left"></div>
-          <div class="eye right"></div>
-          <div class="mouth"></div>
-        </div>
-        <div class="body"></div>
-        <div class="arm left"></div>
-        <div class="arm right"></div>
-      </div>
-    </div>
 
     <div class="gifs">
       <img class="gif" alt="Valentine GIF 1"
@@ -192,32 +85,5 @@
 
     <a class="back" href="./index.html">Back</a>
   </div>
-
-  <script>
-    const stage = document.getElementById('stage');
-
-    function spawnKiss(){
-      const el = document.createElement('div');
-      el.className = 'kiss';
-      el.textContent = Math.random() > 0.5 ? '💋' : '💖';
-
-      const r = stage.getBoundingClientRect();
-      const x = (r.width * 0.5) + (Math.random() * 140 - 70);
-      const y = (r.height * 0.70) + (Math.random() * 30 - 15);
-
-      el.style.left = `${x}px`;
-      el.style.top  = `${y}px`;
-      stage.appendChild(el);
-
-      void el.offsetWidth;
-      el.style.opacity = 1;
-
-      setTimeout(() => el.remove(), 1400);
-    }
-
-    spawnKiss();
-    const timer = setInterval(spawnKiss, 220);
-    setTimeout(() => clearInterval(timer), 3500);
-  </script>
 </body>
 </html>
