--- a/landing.html
+++ b/landing.html
@@ -266,18 +266,18 @@
 </head>
 <body>
   <div class="wrap">
-    <div class="title">A small interactive Valentine surprise 💌</div>
+    <div class="title">Una piccola sorpresa interattiva per San Valentino 💌</div>
 
     <div class="card">
       <div class="envelope-area">
         <div class="envelope clip" id="envelope" aria-label="Open envelope">
           <div class="letter" id="letter">
-            <p class="q">Will you be my Valentine?</p>
-            <p class="sub">Choose wisely 😌</p>
+            <p class="q">Vuoi essere il mio Valentino??</p>
+            <p class="sub">Scegli con attenzione 😌</p>
 
             <div class="btn-row" id="btnRow">
-              <button id="yesBtn" type="button">Yes 💘</button>
-              <button id="noBtn" type="button">No 🙅‍♂️</button>
+              <button id="yesBtn" type="button">SI 💘</button>
+              <button id="noBtn" type="button">NO 🙅‍♂️</button>
             </div>
           </div>
 
@@ -286,8 +286,8 @@
           <div class="pocket"></div>
         </div>
 
-        <div class="tap">Click the envelope to open it.</div>
-        <div class="hint">Tip: after opening, the “No” button doesn’t like being clicked.</div>
+        <div class="tap">Clicca la busta per aprirla.</div>
+        <div class="hint">Consiglio: dopo l’apertura, al pulsante “No” piace CAMBIARE.</div>
       </div>
     </div>
   </div>
@@ -335,5 +335,6 @@
   </script>
 </body>
 </html>
+
 
 
