--- a/yes.html
+++ b/yes.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Great choice!</h1>
+    <h1>Sapevo che avresti detto SI! 🍆🍆</h1>
 
     <div class="gifs">
       <img class="gif" alt="Valentine GIF 1"
@@ -83,7 +83,7 @@
         src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHU3ZjZ3cTNlczRwZTEzZDdrbGU5cTBncnp5MWs4bGljMnk0cm5zbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qdhx91DZB1ApRE8ieK/giphy.gif">
     </div>
 
-    <a class="back" href="./index.html">Back</a>
+    <a class="back" href="./index.html">Torna indietro</a>
   </div>
 </body>
 </html>
