--- a/yes.html
+++ b/yes.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Sapevo che avresti detto SI! 🍆🍆</h1>
+    <h1>Sapevo che avresti detto SI! 🍆🍆<BR>BUON VALENTINI A NOI! 🍷</h1>
 
     <div class="gifs">
       <img class="gif" alt="Valentine GIF 1"
